--- a/pause.html
+++ b/pause.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Consent Form</title>
+    <title>Diagnosis Study Paused</title>
     <link rel="stylesheet" href="https://mjaquiery.github.io/jsPsych/css/jspsych.css"/>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <style type="text/css">
@@ -49,9 +49,9 @@
             </div>
         </div>
         <div class="right">
-            <a href="https://www.oxacclab.org/"><img id="accLogo" class="logo" src="assets/acclab.jpg" alt="Attention and Cognitive Control Lab"/></a>
-            <a href="https://www.psy.ox.ac.uk/"><img id="epLogo" class="logo" src="assets/ep-logo-with-msd.jpg" alt="Department of Experimental Psychology"/></a>
-            <a href="https://www.oxstar.ox.ac.uk//"><img id="oxstarLogo" class="logo" src="assets/oxstar.png" alt="OxSTaR Centre"/></a>
+            <a href="https://www.oxacclab.org/" target="_blank"><img id="accLogo" class="logo" src="assets/acclab.jpg" alt="Attention and Cognitive Control Lab"/></a>
+            <a href="https://www.psy.ox.ac.uk/" target="_blank"><img id="epLogo" class="logo" src="assets/ep-logo-with-msd.jpg" alt="Department of Experimental Psychology"/></a>
+            <a href="https://www.oxstar.ox.ac.uk//" target="_blank"><img id="oxstarLogo" class="logo" src="assets/oxstar.png" alt="OxSTaR Centre"/></a>
         </div>
     </div>
     <div id="panel">
