--- a/consent.html
+++ b/consent.html
@@ -39,7 +39,7 @@
 <body>
     <div id="banner">
         <div class="left">
-            <a href="https://www.ox.ac.uk/"><img id="oxLogo" class="logo" src="assets/oxweb-logo.gif" alt="University of Oxford"/></a>
+            <a href="https://www.ox.ac.uk/" target="_blank"><img id="oxLogo" class="logo" src="assets/oxweb-logo.gif" alt="University of Oxford"/></a>
         </div>
         <div class="center">
             <div class="middle">
@@ -49,9 +49,9 @@
             </div>
         </div>
         <div class="right">
-            <a href="https://www.oxacclab.org/"><img id="accLogo" class="logo" src="assets/acclab.jpg" alt="Attention and Cognitive Control Lab"/></a>
-            <a href="https://www.psy.ox.ac.uk/"><img id="epLogo" class="logo" src="assets/ep-logo-with-msd.jpg" alt="Department of Experimental Psychology"/></a>
-            <a href="https://www.oxstar.ox.ac.uk//"><img id="oxstarLogo" class="logo" src="assets/oxstar.png" alt="OxSTaR Centre"/></a>
+            <a href="https://www.oxacclab.org/" target="_blank"><img id="accLogo" class="logo" src="assets/acclab.jpg" alt="Attention and Cognitive Control Lab"/></a>
+            <a href="https://www.psy.ox.ac.uk/" target="_blank"><img id="epLogo" class="logo" src="assets/ep-logo-with-msd.jpg" alt="Department of Experimental Psychology"/></a>
+            <a href="https://www.oxstar.ox.ac.uk/" target="_blank"><img id="oxstarLogo" class="logo" src="assets/oxstar.png" alt="OxSTaR Centre"/></a>
         </div>
     </div>
     <div id="panel">
