--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     const betaTest = false; // If true, only shows a single trial
     const doInstruct = true; // If true, shows instructions.
-    const doQuestionnaire = false; // If true, includes questionnaires. 
+    const doQuestionnaire = true; // If true, includes questionnaires. 
     const demoQuestions = true; // If true, asks participants for age, gender and medical experience.
     const doDebrief = true; // If true, run debrief questionnaire at the end.
     const doFeedback = true; //If true, shows what conditions all patients had at the end of the experiment.
@@ -80,7 +80,7 @@
     const endRedirectURL = URL; //What URL to redirect to after the experiment.
 
     const sliderName = "Likelihood";
-    const sliderLabels = ["Not At All Likely", "Extremely Likely"];
+    const sliderLabels = ["1","2","3","4","5","6","7","8","9","10"];
     const scaleName = "Level of Concern";
     //const scaleLabels = ["Not at All Concerned","Somewhat Concerned","Highly Concerned", "Emergency"];
     const scaleLabels = ["Low","Medium","High","Emergency"];
@@ -134,7 +134,7 @@
       on_finish: function(){
         var endExperimentTime = Date.now();
         var expTime = msToMinSec(endExperimentTime - startExperimentTime);
-        jsPsych.data.displayData();
+        //jsPsych.data.displayData();
         window.location.replace(endRedirectURL);
     }});
 
@@ -510,7 +510,7 @@
     const differentialDiagnosesTutorial = 
     {
         type: jsPsychFreeTextRankedList,
-        prompt: "<p>At the end of each information stage, you will record a list of differential diagnoses for this patient.</p><p>Click the plus icon to add a diagnosis to the list. Once you type in the diagnosis, click the plus again or Enter on your keyboard. For each differential, you will record how severe this condition could be (Mild, Moderate or Severe) and how likely that diagnosis is on a scale of 1-10.</p><p>Try adding some diagnoses! Once you are done with your list, click Continue. Make sure that you have provided your level of concern and likelihood for all diagnoses before doing so.</p>",
+        prompt: "<p>At the end of each information stage, you will record a list of differential diagnoses for this patient.</p><p>Click the plus icon to add a diagnosis to the list. Once you type in the diagnosis, click the plus again or Enter on your keyboard. For each differential, you will record how concerned you would be if the condition were present in this patient (Low, Medium, High, Emergency) and how likely that diagnosis is on a scale of 1-10.</p><p>Try adding some diagnoses! Once you are done with your list, click Continue. Make sure that you have provided your level of concern and likelihood for all diagnoses before doing so.</p>",
         slider_labels: sliderLabels,
         slider_start: 5,
         slider_prompt: sliderName,
@@ -563,7 +563,7 @@
     const postTutorialInstruct = {
         type: jsPsychInstructions,
          pages: [
-             "<p>You have completed the tutorial case! Feel free to take a short break before proceeding to the main experiment. The main patient cases will vary in difficulty, so do your best to report your differentials and report your confidence accurately.</p><p>One final tip: please try to imagine that you are encountering these patients in your everyday work. When making decisions about what information to request and which differential diagnoses you are considering, make sure you do so in a manner as close as possible to your everyday medical decisions.</p><p>Click Next to begin the experiment.</p>"
+             "<p>You have completed the tutorial case! Feel free to take a short break before proceeding to the main experiment. The main patient cases will vary in difficulty, so do your best to report your differentials and report your confidence accurately.</p><p>One final tip: imagine you are on call working in a busy district hospital. You will be presented with patients who are admitted into the hospital.<strong>Only request tests that are relevant to the case at hand.</strong> When making decisions about what information to request and which differential diagnoses you are considering, make sure you do so in a manner as close as possible to your everyday medical decisions.</p><p>Click Next to begin the experiment.</p>"
         ],
         show_clickable_nav: true,
         allow_backward: false,
@@ -841,7 +841,7 @@
                     choices: stageButtons,
                     response_ends_trial: false,
                     scenarioObject: shuffledScenarios[x],
-                    prompt: "<p>Click a button to gather information or click RECORD DIAGNOSIS to report your final answer.</p>",
+                    prompt: "<p>Click a button to gather information or click RECORD DIAGNOSIS to report your final answer.</p>" + "<p>For this case: " + shuffledScenarios[x].Prompt,
                     shuffle_buttons: randomiseTestOrder,
                     on_load: ()=>{
                         exp.fullscreenMode();
