--- a/end.html
+++ b/end.html
@@ -67,7 +67,7 @@
     <div id="foot">
             <form id="form" onsubmit="checkForm();return false">
                 <div id="charityDiv">
-                    I would like to donate my participation payment to charity. <input id="charity" class="big" type="checkbox"/>
+                    Tick this box to donate your participation payment to charity. Leave blank if not.<input id="charity" class="big" type="checkbox"/>
                 </div>
 
                 <div id="donateto" hidden>
